Feat: Introduce VAPT Builder agent skill with documentation, configuration examples, and utility scripts for schema generation and multi-server support.

--- a/.agent/skills/vapt-builder/examples/nginx-custom-rules.conf
+++ b/.agent/skills/vapt-builder/examples/nginx-custom-rules.conf
@@ -6,6 +6,7 @@ add_header X-Content-Type-Options "nosniff" always;
 add_header X-Frame-Options "SAMEORIGIN" always;
 add_header X-XSS-Protection "1; mode=block" always;
 add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+add_header X-VAPTC-Enforced "security-headers" always;
 
 # 2. Block Sensitive Files
 location ~* \.(log|ini|git|env|sh|sql)$ {
